# betterssh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs  ssh_config.rs  storage.rs  vault.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: client.rs  error.rs  lib.rs  port_forward.rs  sftp.rs
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: app.rs  lib.rs  pty_render.rs  settings.rs  state.rs  theme.rs  update.rs  view.rs
examples/: hosts.toml
