[package]
name = "betterssh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "TUI SSH connection manager in tmux/screen style"

[[bin]]
name = "betterssh"
path = "src/main.rs"

[dependencies]
betterssh-core = { path = "../core" }
betterssh-tui = { path = "../tui" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
toml = { workspace = true }
