[package]
name = "betterssh-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
betterssh-core = { path = "../core" }
betterssh-ssh = { path = "../ssh" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
unicode-width = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
vt100 = { workspace = true }
russh = { workspace = true }
toml = { workspace = true }
ureq = { version = "2.9", default-features = false, features = ["json", "gzip", "tls"] }
serde_json = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { workspace = true }
